# libnice-rs

./: .gitignore  Cargo.toml  README.md
gir-files/: Nice-0.1.gir
nice/: Cargo.toml  Gir.toml
nice/src/: address.rs  agent.rs  lib.rs
nice/src/auto/: address.rs  agent.rs  candidate.rs  enums.rs  flags.rs  mod.rs  versions.txt
nice/sys/: Cargo.toml  Gir.toml  build.rs
nice/sys/src/: lib.rs  manual.rs
nice/sys/src/auto/: versions.txt
nice/sys/tests/: abi.rs  constant.c  layout.c  manual.h
