[package]
name = "libnice-rs"
version = "0.1.0"
authors = ["Abdul Rehman <abdul@vocinity.com>"]
edition = "2018"
repository = "https://github.com/abdul-0/libnice-rs"
description  = "Rust bindings for libnice"
license = "MIT"

[dependencies]
ffi = { package = "nice-sys", path = "sys", features = ["v0_1_18"], version = "0.1.0" }
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
libc = "0.2"
bitflags = "1.2"
