[package]
name = "libnice-rs"
version = "0.1.0"
authors = ["Abdul Rehman <abdul@vocinity.com>"]
edition = "2018"
repository = "https://github.com/abdul-0/libnice-rs"
description  = "Rust bindings for libnice"
license = "MIT"

[dependencies]
ffi = { package = "n-sys", path = "sys", version = "0.1.0", features = ["v0_1_4"]}
glib = { git = "https://github.com/gtk-rs/gtk-rs", rev = "757f0701cb"}
libc = "0.2"
bitflags = "1.2"

[features]
default = []
v0_1_5 = ["ffi/v0_1_5"]
v0_1_6 = ["ffi/v0_1_6", "v0_1_5"]
v0_1_8 = ["ffi/v0_1_8", "v0_1_6"]
v0_1_14 = ["ffi/v0_1_14", "v0_1_8"]
v0_1_15 = ["ffi/v0_1_15", "v0_1_14"]
v0_1_16 = ["ffi/v0_1_16", "v0_1_15"]
v0_1_17 = ["ffi/v0_1_17", "v0_1_16"]
v0_1_18 = ["ffi/v0_1_18", "v0_1_17"]
