[package]
name = "n-sys"
version = "0.1.0"
links = "\"nice\""
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.nice]
version = "0.1"
name = "nice"

[package.metadata.system-deps.nice.v0_1_4]
version = "0.1.4"

[package.metadata.system-deps.nice.v0_1_5]
version = "0.1.5"

[package.metadata.system-deps.nice.v0_1_6]
version = "0.1.6"

[package.metadata.system-deps.nice.v0_1_8]
version = "0.1.8"

[package.metadata.system-deps.nice.v0_1_14]
version = "0.1.14"

[package.metadata.system-deps.nice.v0_1_15]
version = "0.1.15"

[package.metadata.system-deps.nice.v0_1_16]
version = "0.1.16"

[package.metadata.system-deps.nice.v0_1_17]
version = "0.1.17"

[package.metadata.system-deps.nice.v0_1_18]
version = "0.1.18"

[package.metadata.system-deps.nice.v0_1_19]
version = "0.1.19"

[package.metadata.system-deps.nice.v0_1_20]
version = "0.1.20"

[package.metadata.docs.rs]
features = []

[lib]
name = "nice_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.17"

[dependencies.gobject]
package = "gobject-sys"
version = "0.17"

[dependencies.gio]
package = "gio-sys"
version = "0.17"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_1_4 = []
v0_1_5 = []
v0_1_6 = ["v0_1_5"]
v0_1_8 = ["v0_1_6"]
v0_1_14 = ["v0_1_8"]
v0_1_15 = ["v0_1_14"]
v0_1_16 = ["v0_1_15"]
v0_1_17 = ["v0_1_16"]
v0_1_18 = ["v0_1_17"]
v0_1_19 = ["v0_1_18"]
v0_1_20 = ["v0_1_19"]
